--- a/foil/styles/themes/theme_sfc.css
+++ b/foil/styles/themes/theme_sfc.css
@@ -109,14 +109,14 @@ header nav .current a {
 .button a:link, input[type=submit] a:link, header nav a a:link,
 header nav .selflink a:link,
 header nav em a:link,
-header nav .current a a:link {
+header nav .current a a:link, a.button:link, header nav a:link {
   color: #e0e0eb;
 }
 
 .button a:visited, input[type=submit] a:visited, header nav a a:visited,
 header nav .selflink a:visited,
 header nav em a:visited,
-header nav .current a a:visited {
+header nav .current a a:visited, a.button:visited, header nav a:visited {
   color: #cca3f5;
 }
 
