Fixing a bug with the @print CSS styles.

--- a/dev/src/layout/layout_flex.scss
+++ b/dev/src/layout/layout_flex.scss
@@ -244,6 +244,7 @@ footer {
     header { display: none; }
     footer { display: none; }
     .side { display: none; }
+    #inner { display: block; }
     main {
 	margin: 1ex;
 	width: 98%;
