make print be 100% wide

--- a/foil/styles/layout/layout_flex.css
+++ b/foil/styles/layout/layout_flex.css
@@ -276,8 +276,8 @@ footer div {
   }
 
   main {
-    margin: 1ex;
-    width: 98%;
+    margin: 0;
+    width: 100%;
     background: white;
     color: black;
     left: 0;
