--- a/dev/src/layout/layout_flex.scss
+++ b/dev/src/layout/layout_flex.scss
@@ -246,8 +246,8 @@ footer {
     .side { display: none; }
     #inner { display: block; }
     main {
-	margin: 1ex;
-	width: 98%;
+	margin: 0;
+	width: 100%;
 	background: white;
 	color: black;
 	left: 0;
