tweaking hover underline

--- a/dev/src/layout/layout_flex.scss
+++ b/dev/src/layout/layout_flex.scss
@@ -82,7 +82,7 @@ header nav .current a {
     border-radius: 20px 5px 20px 5px;
 } 
 
-.button:hover,
+.button a:hover,
 header nav a:hover {
     text-decoration: underline;
     background-image: url(gloss2.png);
